[+] Fonction : Donnees -> graph.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -10,6 +10,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Pkg\n",
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +45,7 @@
     "        Vector{Int64},\n",
     "        Vector{Int64},\n",
     "        Dict{Tuple{Int64, Int64}, NamedTuple{(:d, :big_d), Tuple{Int64, Float64}}},\n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "    lines::Vector{String} = readlines(fd)\n",
     "    n::Int64 = parse(Int64, split(lines[1], \" \")[end])\n",
@@ -101,6 +112,118 @@
     "println(infos.p)\n",
     "println(infos.ph)\n",
     "println(infos.arcs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Transformation des infos brutes en graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Graphs, MetaGraphsNext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function weight_fun(\n",
+    "    ntup::NamedTuple{\n",
+    "        (:d, :big_d, :weight),\n",
+    "        Tuple{Int64, Float64, Ref{Float64}}\n",
+    "    }\n",
+    ")::Float64\n",
+    "    return ntup.weight[]\n",
+    "end\n",
+    "\n",
+    "function graphFromData(\n",
+    "    data::NamedTuple{\n",
+    "        (:n, :s, :t, :big_s, :d1, :d2, :p, :ph, :arcs),\n",
+    "        Tuple{\n",
+    "            Int64,\n",
+    "            Int64,\n",
+    "            Int64,\n",
+    "            Int64,\n",
+    "            Int64,\n",
+    "            Int64,\n",
+    "            Vector{Int64},\n",
+    "            Vector{Int64},\n",
+    "            Dict{Tuple{Int64, Int64}, NamedTuple{(:d, :big_d), Tuple{Int64, Float64}}},\n",
+    "        },\n",
+    "    }\n",
+    ")::MetaGraph\n",
+    "    if data.s == data.t\n",
+    "        error(\"The source and the sink are the same node.\")\n",
+    "    end\n",
+    "    graph = MetaGraph(\n",
+    "        DiGraph();\n",
+    "        label_type=Int64,\n",
+    "        vertex_data_type=NamedTuple{(:is_s, :is_t, :p, :ph), Tuple{Bool, Bool, Int64, Int64}},\n",
+    "        edge_data_type=NamedTuple{(:d, :big_d, :weight), Tuple{Int64, Float64, Ref{Float64}}},\n",
+    "        weight_function=weight_fun,\n",
+    "        default_weight=Inf,\n",
+    "        graph_data=(s=data.s, t=data.t, big_s=data.big_s, d1=data.d1, d2=data.d2),\n",
+    "    )\n",
+    "    for i in 1:data.n\n",
+    "        if i == data.s\n",
+    "            graph[i] = (is_s=true, is_t=false, p=data.p[i], ph=data.ph[i])\n",
+    "        elseif i == data.t\n",
+    "            graph[i] = (is_s=false, is_t=true, p=data.p[i], ph=data.ph[i])\n",
+    "        else\n",
+    "            graph[i] = (is_s=false, is_t=false, p=data.p[i], ph=data.ph[i])\n",
+    "        end\n",
+    "    end\n",
+    "    for ((i, j), arc) in data.arcs\n",
+    "        graph[i, j] = (d=arc.d, big_d=arc.big_d, weight=Ref{Float64}(Inf))\n",
+    "    end\n",
+    "    return graph\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph = (\n",
+    "    (\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "    |> joinpath\n",
+    "    |> open\n",
+    "    |> readInstance\n",
+    "    |> graphFromData\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in labels(graph)\n",
+    "    println(graph[i])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (i, j) in edge_labels(graph)\n",
+    "    print(graph[i, j])\n",
+    "end"
    ]
   }
  ],
