[+] Complete le setup avec Gurobi.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -20,7 +20,10 @@
     "Pkg.instantiate()\n",
     "using Graphs\n",
     "using MetaGraphsNext\n",
+    "using JuMP\n",
+    "using Gurobi\n",
     "\n",
+    "ENV[\"GRB_LICENSE_FILE\"] = \"shortcut_to_my_license.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));"
    ]
   },
