nouvelle variable d'environnement

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -23,8 +23,17 @@
     "using JuMP\n",
     "using Gurobi\n",
     "\n",
-    "ENV[\"GRB_LICENSE_FILE\"] = \"shortcut_to_my_license.lic\"\n",
+    "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = Model(Gurobi.Optimizer)"
    ]
   },
   {
