[+] Prepare des petits tests.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -33,6 +33,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+                "file = joinpath(\"data\", \"20_USA-road-d.COL.gr\")\n",
                 "infos = open(\n",
                 "    readInstance,\n",
                 "    file,\n",
@@ -100,8 +102,8 @@
                 "default_heur_params = (\n",
                 "    m_start=1.0,\n",
                 "    m_smoother=baseSmoother,\n",
-                "    v_smoother=n -> 1 + n / 10 |> baseSmoother,\n",
-                "    e_smoother=n -> 1 + n / 10 |> baseSmoother,\n",
+                "    v_smoother=n -> 9 + n / 10 |> baseSmoother,\n",
+                "    e_smoother=n -> 9 + n / 10 |> baseSmoother,\n",
                 ")\n",
                 "\n",
                 "function heurWeight(e::HeurEdge)::Float64\n",
@@ -248,6 +250,7 @@
                 "        end\n",
                 "        n += 1\n",
                 "    end\n",
+                "    println(n)\n",
                 "    return best_sol, best_sol_value\n",
                 "end"
             ]
