[*] Prepare des tests.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -33,18 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = Model(Gurobi.Optimizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
     "infos = open(\n",
     "    readInstance,\n",
-    "    joinpath(\"data\", \"20_USA-road-d.BAY.gr\"),\n",
+    "    file,\n",
     ");"
    ]
   },
@@ -186,7 +179,8 @@
    "outputs": [],
    "source": [
     "res = dualSolve(graph; timelimit=time() + 60.0)\n",
-    "mkPath(res.a)"
+    "println(mkPath(res.a))\n",
+    "println(res.obj_value)"
    ]
   }
  ],
