--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -156,6 +156,72 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "function resolution_SP1(a_val, z_val)\n",
+                "    # Résolution SP1\n",
+                "    @objective(SP1, Max, sum(graph[i, j].d * (1 + delta_d[(i,j)]) * a_val[(i, j)] for (i, j) in edge_labels(graph)) )\n",
+                "    JuMP.optimize!(SP1)\n",
+                "    SP1_value = JuMP.objective_value(SP1)\n",
+                "    # println(\"Objective value SP1: \", SP1_value)\n",
+                "    delta_d_sol = JuMP.value.(delta_d)\n",
+                "    return SP1_value, delta_d_sol\n",
+                "end\n",
+                "\n",
+                "function resolution_SP2(a_val, z_val)\n",
+                "    # Résolution SP2\n",
+                "    t = graph[].t\n",
+                "    @objective(SP2, Max,\n",
+                "    sum((graph[i].p + delta_p[i] * graph[i].ph) * a_val[(i, j)] for (i, j) in edge_labels(graph)) +\n",
+                "    graph[t].p + delta_p[t] * graph[t].ph )\n",
+                "    JuMP.optimize!(SP2)\n",
+                "    # temp = JuMP.value.(delta_d)\n",
+                "    # for (i, j) in edge_labels(graph)\n",
+                "    #     if temp[(i,j)] > 0\n",
+                "    #         println(\"(\",i,\",\",j,\") = \", temp[(i,j)])\n",
+                "    #     end\n",
+                "    # end\n",
+                "    SP2_value = JuMP.objective_value(SP2)\n",
+                "    # println(\"Objective value SP2: \", SP2_value)\n",
+                "    delta_p_sol = JuMP.value.(delta_p)\n",
+                "    return SP2_value, delta_p_sol\n",
+                "end\n",
+                "\n",
+                "function my_lazy_callback(cb_data)\n",
+                "    # On récupère la valeur de a\n",
+                "    a_val = Dict((i,j) => callback_value(cb_data, a[(i,j)]) for (i,j) in edge_labels(graph))\n",
+                "    # a_val = callback_value.(cb_data, a)\n",
+                "    z_val = callback_value(cb_data, z)\n",
+                "\n",
+                "    # Résolution SP1\n",
+                "    SP1_value, delta_d_sol = resolution_SP1(a_val, z_val)\n",
+                "    if (round(SP1_value - z_val; digits=4) > 0)\n",
+                "        cstr = @build_constraint(\n",
+                "            sum(graph[i, j].d * (1 + delta_d_sol[(i,j)]) * a[(i, j)] for (i, j) in edge_labels(graph)) <= z)\n",
+                "        MOI.submit(modele_maitre, MOI.LazyConstraint(cb_data), cstr)\n",
+                "        println(\"Added SP1 constraint\")\n",
+                "        # println(\"Violée 1\")\n",
+                "    end\n",
+                "\n",
+                "    # Résolution SP2\n",
+                "    t = graph[].t\n",
+                "    SP2_value, delta_p_sol = resolution_SP2(a_val, z_val)\n",
+                "    if (SP2_value > graph[].big_s)\n",
+                "        cstr = @build_constraint(\n",
+                "            sum((graph[i].p + delta_p_sol[i] * graph[i].ph) * a[(i, j)] for (i, j) in edge_labels(graph)) +\n",
+                "            graph[t].p + delta_p_sol[t] * graph[t].ph <= graph[].big_s\n",
+                "        )\n",
+                "        MOI.submit(modele_maitre, MOI.LazyConstraint(cb_data), cstr)\n",
+                "        println(\"Added SP2 constraint\")\n",
+                "        # println(\"Violée 2\")\n",
+                "    end\n",
+                "end"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "ResultWrapper = NamedTuple{\n",
                 "    (:primal_status, :dual_status, :term_status, :obj_value, :bound, :a),\n",
                 "    Tuple{\n",
@@ -168,66 +234,19 @@
                 "    }\n",
                 "}\n",
                 "\n",
-                "function plans_coupants(\n",
+                "function branch_and_cut(\n",
                 "    graph::MetaGraph;\n",
                 "    timelimit::Float64=3600.0\n",
                 ")::ResultWrapper\n",
                 "    start = time()\n",
                 "    s::Int64 = graph[].s\n",
                 "    t::Int64 = graph[].t\n",
-                "    cpt = 0\n",
-                "    while (time() - start < timelimit )\n",
-                "        JuMP.optimize!(modele_maitre)\n",
-                "        m_value = JuMP.objective_value(modele_maitre)\n",
-                "        Z = JuMP.value(z)\n",
-                "        A = JuMP.value.(a)\n",
-                "        for (i, j) in edge_labels(graph)\n",
-                "            if A[(i,j)] > 0\n",
-                "                println(\"(\",i,\",\",j,\") = \", A[(i,j)])\n",
-                "            end\n",
-                "        end\n",
-                "        # println(\"distance : \", sum(graph[i, j].d * A[(i, j)] for (i, j) in edge_labels(graph)))\n",
-                "        # println(\"weights : \", sum(graph[i].p * A[(i, j)] for (i, j) in edge_labels(graph)) + graph[graph[].t].p)\n",
-                "        # println(\"Z: \", Z)\n",
-                "        println(\"Objective value modele_maitre: \", m_value)\n",
-                "        cpt += 1\n",
-                "        # Résolution SP1\n",
-                "        @objective(SP1, Max, sum(graph[i, j].d * (1 + delta_d[(i,j)]) * A[(i, j)] for (i, j) in edge_labels(graph)) )\n",
-                "        JuMP.optimize!(SP1)\n",
-                "        SP1_value = JuMP.objective_value(SP1)\n",
-                "        println(\"Objective value SP1: \", SP1_value)\n",
-                "        delta_d_sol = JuMP.value.(delta_d)\n",
-                "        if (round(SP1_value - Z; digits=4) > 0)\n",
-                "            @constraint(modele_maitre,\n",
-                "            sum(graph[i, j].d * (1 + delta_d_sol[(i,j)]) * a[(i, j)] for (i, j) in edge_labels(graph)) <= z )\n",
-                "            println(\"Violée 1\")\n",
-                "        end\n",
-                "        # Résolution SP2\n",
-                "        @objective(SP2, Max,\n",
-                "        sum((graph[i].p + delta_p[i] * graph[i].ph) * A[(i, j)] for (i, j) in edge_labels(graph)) +\n",
-                "        graph[t].p + delta_p[t] * graph[t].ph )\n",
-                "        JuMP.optimize!(SP2)\n",
-                "        # temp = JuMP.value.(delta_d)\n",
-                "        # for (i, j) in edge_labels(graph)\n",
-                "        #     if temp[(i,j)] > 0\n",
-                "        #         println(\"(\",i,\",\",j,\") = \", temp[(i,j)])\n",
-                "        #     end\n",
-                "        # end\n",
-                "        SP2_value = JuMP.objective_value(SP2)\n",
-                "        println(\"Objective value SP2: \", SP2_value)\n",
-                "        delta_p_sol = JuMP.value.(delta_p)\n",
-                "        if (SP2_value > graph[].big_s)\n",
-                "            @constraint(modele_maitre,\n",
-                "            sum((graph[i].p + delta_p_sol[i] * graph[i].ph) * a[(i, j)] for (i, j) in edge_labels(graph)) +\n",
-                "            graph[t].p + delta_p_sol[t] * graph[t].ph <= graph[].big_s )\n",
-                "            println(\"Violée 2\")\n",
-                "        end\n",
-                "        if (round(SP1_value - Z; digits=4) <= 0 && SP2_value <= graph[].big_s)\n",
-                "            # println(\"C'est bon wtf\")\n",
-                "            break\n",
-                "        end\n",
-                "    end\n",
-                "    println(\"COMPTEUR = \", cpt)\n",
+                "    # while (time() - start < timelimit)\n",
+                "    # Activation du lazycallback\n",
+                "    MOI.set(modele_maitre, MOI.LazyConstraintCallback(), my_lazy_callback)\n",
+                "    JuMP.optimize!(modele_maitre)\n",
+                "    m_value = JuMP.objective_value(modele_maitre)\n",
+                "    # end\n",
                 "    println(\"elapsed time : \", time() - start)\n",
                 "    return (\n",
                 "        primal_status=primal_status(modele_maitre),\n",
@@ -246,7 +265,32 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "res = plans_coupants(graph; timelimit=1200.0)\n",
+                "function mkPath(a::Dict{Tuple{Int64, Int64}, Float64})::Vector{Int64}\n",
+                "    building_dict::Dict{Int64, Int64} = Dict{Int64, Int64}()\n",
+                "    for ((i, j), val) in pairs(a)\n",
+                "        int_val::Int64 = Int64(val)\n",
+                "        floor(val) == val && int_val in [0, 1] ? nothing : error(\"a is not integer feasible.\")\n",
+                "        if int_val == 1\n",
+                "            haskey(building_dict, i) ? error(\"Two arcs coming from the same node.\") : building_dict[i] = j\n",
+                "        end\n",
+                "    end\n",
+                "    current_i::Int64 = only(setdiff(keys(building_dict), values(building_dict)))\n",
+                "    path::Vector{Int64} = [current_i]\n",
+                "    while haskey(building_dict, current_i)\n",
+                "        current_i = building_dict[current_i]\n",
+                "        push!(path, current_i)\n",
+                "    end\n",
+                "    return path\n",
+                "end"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "res = branch_and_cut(graph; timelimit=time() + 60.0)\n",
                 "println(mkPath(res.a))\n",
                 "println(res.obj_value)"
             ]
